--- a/style.css
+++ b/style.css
@@ -175,8 +175,10 @@
 
 .target{
     width: 100%;
-    height: 100vh;
-    border: 2px solid black;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -192,7 +194,62 @@
 }
 
 .target .cont{
+    margin-top: 50px;
+    display: flex;
+    width: 80%;
+    height: 70vh;
+    justify-content: space-around;
+}
+
+.target .cont .box{
+   width: 30%;
+   height: 90%;
+   border: 2px solid transparent;
+   border-radius: 20px;
+   padding: 30px;
+
    
+}
+.cont .box img{
+    margin: 20px;
+}
+.cont .box h1{
+    margin: 10px;
+}
+.cont .box p{
+    margin: 10px;
+    font-size: larger;
+}
+.cont .box a{
+    font-size: larger;
+    margin: 10px;
+}
+
+
+.cont .box:nth-of-type(1){
+    background-color: rgb(255, 241, 220);
+}
+.cont .box:nth-of-type(2){
+    background-color: rgb(207, 255, 254);
+}
+.cont .box:nth-of-type(3){
+    background-color: rgb(255, 224, 226);
 }
 
   
+
+.ftr{
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.ftr .support{
+    width: 80%;
+    height: 80%;
+    border: 2px solid black;
+    border-radius: 20px;
+}
