--- a/style.css
+++ b/style.css
@@ -181,7 +181,6 @@
     align-items: center;
 }
 
-
 .target .tar_title h1{
     font-size: xx-large;
     text-align: center;
@@ -248,8 +247,76 @@
 }
 
 .ftr .support{
+    margin-top: 150px;
     width: 80%;
     height: 80%;
-    border: 2px solid black;
+    border: 2px solid transparent;
     border-radius: 20px;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('img/handshake.jpg');
+    background-size: cover;
+    background-position: center;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 200px;
+}
+.support h1{
+    font-size: xx-large;
+}
+.support p{
+    font-size:larger;
+    margin: 0px 50px;
+}
+
+.ftr .int{
+    margin: 20px;
+}
+.int{
+    width: 60%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+.int input{
+    font-size: larger;
+    padding: 10px;
+    width: 400px;
+    height: 45px;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    margin: 0px 20px;
+}
+
+.int button{
+    height: 45px;
+    /* padding: 10px; */
+    font-size: x-large;
+    /* text-align: center; */
+    width: 150px;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+
+.footer{
+    margin-top: 200px;
+    padding: 0px 100px;
+    width: 100%;
+    height: 13vh;
+    border: 2px solid transparent;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(255, 254, 252);
+
+}
+
+.footer .links a{
+    margin-left: 20px;
 }
